fully functional slideshow; fixing up a few things with alignment

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Satisfy&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Roboto:500&display=swap');
-
+@import url('https://fonts.googleapis.com/css?family=Asap:500i&display=swap');
 
 .background {
 	min-width: 100vw;
@@ -50,11 +50,7 @@ nav a {
 	text-decoration: none;
 }
 
-
-
 .recent-news {
-	margin-top: 10em;
-	/*background-color: #C4C4C4;*/
 	height:400px;
 }
 
@@ -148,13 +144,21 @@ a:link, a:visited {
 .circle-display {
 	display: flex;
 	flex-direction: column;
-	margin-top: 6em;
 	height: 440px;
 	max-width: 80%;
     position: relative;
-    margin: auto;
+    margin: 4em auto;
     border: 2px solid black;
     background-color: #C4C4C4;
+}
+
+h1 {
+	padding: 0 0 2em 0;
+}
+
+
+a {
+	text-decoration: none;
 }
 
 .article-toggle {
@@ -172,6 +176,14 @@ a:link, a:visited {
 	border-bottom: 2px solid black;
 	max-width: 60%;
 	width:100%;
+}
+
+.article a {
+	width: 40%;
+}
+
+.article a:link, .article a:visited {
+	color: #000000;
 }
 
 .circle-display:hover .prev{
@@ -205,10 +217,13 @@ a:link, a:visited {
 }
 
 .caption {
-  font-size: 15px;
+  font-family: 'Asap', sans-serif;
+  font-size: 20px;
   padding: 8px 12px;
   min-width: 20%;
   text-align: center;
+
+
 }
 
 
